@@ -1,5 +1,5 @@
-DEFINED_PHASES=configure install test
-DEPEND=x11-libs/libX11 x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXi x11-libs/libXtst x11-libs/libxcb gnome? ( x11-libs/gtk+:2 >=gnome-base/libgnomeui-2 >=gnome-base/gconf-2 ) x11-proto/inputproto virtual/pkgconfig sys-devel/gettext gnome? ( || ( media-gfx/imagemagick[jpeg,png] media-gfx/graphicsmagick[imagemagick,jpeg,png] ) )
+DEFINED_PHASES=configure install prepare test
+DEPEND=x11-libs/libX11 x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-libs/libXi x11-libs/libXtst x11-libs/libxcb gnome? ( x11-libs/gtk+:2 >=gnome-base/libgnomeui-2 >=gnome-base/gconf-2 ) x11-proto/inputproto virtual/pkgconfig sys-devel/gettext gnome? ( || ( media-gfx/imagemagick[jpeg,png] media-gfx/graphicsmagick[imagemagick,jpeg,png] ) ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
 DESCRIPTION=Program suite to record, replay and distribute user actions.
 EAPI=5
 HOMEPAGE=http://www.sandklef.com/xnee/
@@ -10,5 +10,5 @@ RDEPEND=x11-libs/libX11 x11-libs/libXau x11-libs/libXdmcp x11-libs/libXext x11-l
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://gnu/xnee/xnee-3.17.tar.gz
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=16d807b94e3ec641cf1f02e94c717d80
+_eclasses_=autotools	b0a4d5334d34abe7b6829eb87cf3c544	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=a35d8919576ebb9b5fe10d8a4e3e1303
