@@ -6,14 +6,14 @@ DIST xnee-3.16.tar.gz 1798348 SHA256 07393d84d7abfab607b5ba078a0c32411815b7c8833
 DIST xnee-3.17.tar.gz 1860037 SHA256 c76d1c8b9deff2e52721e474cb69cf092c0d72212c916c6dacc94e33618c8638 SHA512 fc28933b567b5d6136d2c0b4f5611b01b075e643b78d54e06bfbe61ee832058045e46bb0f757333eeb99f9ae21749625f0dba5435be1d7d2a0d45d99d5bdeedc WHIRLPOOL 1fa2547fb2409d14029bd8016085f295e5f584f74d75fb098ace985e6a66a945167a79fe0aa2da115ec289cf07019a19d8f6f9ba9479059f406d48461ce8042d
 DIST xnee-3.18.tar.gz 1860727 SHA256 24d521b604f3118faf1bd087619feb230cda38bf3721000828e670e0f311cb48 SHA512 440c0c50acbc62095348b96305165a87dba388fa9a9ce862bff1e7da9a964dd947ea86d84bc54d0fc805be64550379c07b950803a4a1dde2658d5e7ca43fa28a WHIRLPOOL f333248b6d05fc665f214d220db64d3aecf53529b5b61b1d404c2f2ed184b3cde6eed6bf5c19ccf189b1a8c959bc373f4912b63c8d30c55e3707c4d2d32d987b
 EBUILD xnee-3.16.ebuild 1523 SHA256 56bb48c7e5696032122fefe1ed7b3d3d496f2f7fe8b8b717b91267ff8d3d0602 SHA512 572ca693313b2c7410f255bddf2f3b91552e31910f4a2f17623616756b0e5ceb89e491d0e35e27cee0d75124c1ccdb27e3cb765a39d62e9c22cca09a73fbdca4 WHIRLPOOL e351d9e115b868f5139cf6ca3774a5ebc1f4d20279a6ddc8b8ebf3cb14d545d84dc8eab1cf216ae8eadc37a151f7a781f6f4510663c8ff4fb8500e94f48f3294
-EBUILD xnee-3.17.ebuild 1523 SHA256 2e1a2b11312644acb02eba3c6a2c15ce2be54ab1d34f2d4b5f81aac7d3d77201 SHA512 aab6a7a8f4ae549364e87a1bbf131a68b2e959b22a3eb167a9941db5c2ec6406aa43cff45e80a0bbbe14b87f1afaf5d1edb63321ed401f053d9de350f3191269 WHIRLPOOL abeec991cac66eac3cccee68c9afb7ac01749d67ed330dfe40e83c64889831ef9df8dfa3991fd03fc887ec71af5891d58819cfc606f55f657cc5932e6b481552
+EBUILD xnee-3.17.ebuild 1611 SHA256 80696ee13e22469134428793848d38e3edef61eaf44b894dc2c1be0e04d31135 SHA512 cd6f23218f8e4f63425b34bf34116b394206fb3a7e411fa06b13c3ebef122d62fce97fb6475ef91e6fbb35aee76743493adedc3f0659be4c1e6cf77a0c4dfefd WHIRLPOOL 1dae772ec1f76218c70ecfd1aeb198fb176e1097a9d862ffed28013b6f292deb7060e6e27eba26435b1b8b98be2387e4bd61191cc4ad7152255c981084444b16
 EBUILD xnee-3.18.ebuild 1605 SHA256 82eeaa932b951e2c8ec9e9c5824320b8a25ef006a295952c9fe331c63d87a78a SHA512 d8d19b9ba7128e37a7c4fdd5f64ca34a16d81a5195e2e873c7a8961c701f110b11a8cf914e79975f2af1861f5385a80459da0d0f5f6fbc28002f2bd474d17cc8 WHIRLPOOL 28732612fde4c7ff36e2d55b1c7e7372a43873af37c7203165fcf9e9b391ef934ac4c786bd5aa35234883c2633e3bc4587127a5949977e86a874a37d9267f823
-MISC ChangeLog 4533 SHA256 32e7eeda352684d886804261d148287a77a67b2d6d63113ea4fb1324f20bff71 SHA512 b37ae63f2566c994b8d00f13be379fb94b8a116ffbca22e0d28077f63f8f0a4d05415a3f6080cb4f27600e40e1032a3fd83b859604f9f937ed87d702dd64f1d3 WHIRLPOOL 20d1f4018afb42ee9413b83631aecb1c694c395180e1ecf5e8b8f30a86108a8d81ddd7c8e129df9e19b3f1afcfb21cd58e7b599147dad8e70cd628d1edd5f394
+MISC ChangeLog 4628 SHA256 d0b3ab4299eeb641b2fd6ac089f8cfd00264b9bd2391b5d6695a31439ca85013 SHA512 3f663b9764f6336c00efd4483c3b1ecde8e1a6ca7d173118c77a976ab976939ed16a755ac4aa4f415211c34a92c57aff3becc099c748986dcc2660621708ea09 WHIRLPOOL 41af424be6f42a6e998f5c50f7440623bb078710bb13a5acc929beff4c4273439249f5760d917ced0ea75b2be69ebef3f996290f0baccf5b2dcb953d6867b818
 MISC metadata.xml 173 SHA256 2f2c48f12680e78f700e809ba6ff98c67b1ea8b707291659c1bfb6b20d28835f SHA512 0f9f902a37286192de62589f1aace6bec3cfe2a8511ac95e98b55324a9da1a5e79b8f14316e1be0b818e90c0be0cec5fe16f75d9055301a774b241e1486f62c2 WHIRLPOOL 0d0c57c7890f2cdb7210d2d1d61d03d412478747414999bc7919d70b8243ddc66d7903df50158671e8cc454913b4d859f752bbe3709404aa15608e1f1234d717
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMN3fEACgkQVWmRsqeSphMWegCeJ1iA+hwakvHOkDuJAOc+udnO
-49cAnRAuKXL7j52ISWI1gWlfmMSP2zqb
-=VW23
+iEYEAREIAAYFAlMORpwACgkQVWmRsqeSphM82wCePopH6u2khrnZf/U8zjQSTBeV
+r6cAn2fTQqlu6uH3ZdsIHRZr22B3tbDm
+=sA6a
 -----END PGP SIGNATURE-----
