@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xnee
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xnee/ChangeLog,v 1.30 2014/02/26 12:28:32 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xnee/ChangeLog,v 1.31 2014/02/26 19:55:07 jer Exp $
+
+  26 Feb 2014; Jeroen Roovers <jer@gentoo.org> xnee-3.17.ebuild:
+  Fix xnee-3.17 linking too.
 
 *xnee-3.18 (26 Feb 2014)
 
